# ferrvm

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  TODO.md
.github/workflows/: rust.yml
contrib/: build-initramfs.sh
contrib/capi/bhyve/: .gitignore  Makefile  bhyve_api.c
contrib/capi/kvm/: .gitignore  Makefile  kvm_api.c
docs/: build-linux-kernel.md  kvm-to-bhyve.md  virtio-rng.md
guest/: Cargo.toml  README.md
guest/.cargo/: config.toml
guest/src/: main.rs
src/: boot.rs  bootparams.rs  bus.rs  config.rs  elf.rs  hypervisor.rs  input.rs  lib.rs  main.rs  memory.rs  pci.rs  serial.rs  stats.rs  terminal.rs  traits.rs  vcpu.rs
src/bhyve/: api.rs  core.rs  exithandler.rs  ioctl.rs  irq.rs  mod.rs
src/kvm/: api.rs  core.rs  exithandler.rs  ioctl.rs  irq.rs  mod.rs
src/virtio/: blk.rs  mmio.rs  mod.rs  pci.rs  rng.rs
