[package]
name = "guest"
version = "0.1.0"
edition = "2024"
authors = ["Anastasios Papagiannis <tasos.papagiannnis@gmail.com>"]
description = "A simple guest kernel for ferrvm."
license = "MIT OR Apache-2.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[[bin]]
name = "guest"
test = false
bench = false